# unfinished-bazel-migration

./: .gitignore  MODULE.bazel  README.md  flake.nix  maven_install.json
src/com/softwaremill/realworld/common/.bsp/: scala.json
src/com/softwaremill/realworld/common/.scala-build/: ide-envs.json  ide-inputs.json  ide-launcher-options.json
src/com/softwaremill/realworld/common/.scala-build/.bloop/: common_632ca902a3-7056790636.json  common_cdbcac85ee-7056790636.json
