bazel_dep(name = "rules_jvm_external", version = "6.4")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "com.softwaremill.sttp.tapir:tapir-zio-http-server_3:1.11.7",
        "com.softwaremill.sttp.tapir:tapir-json-zio_3:1.11.7",
        "com.softwaremill.sttp.tapir:tapir-swagger-ui-bundle_3:1.11.7",
        "dev.zio:zio-config-typesafe_3:4.0.2",
        "dev.zio:zio-config-magnolia_3:4.0.2",
        "com.password4j:password4j:1.8.2",
        "com.auth0:java-jwt:4.4.0",
        "org.xerial:sqlite-jdbc:3.46.1.3",
        "org.flywaydb:flyway-core:10.20.0",
        "com.zaxxer:HikariCP:6.0.0",
        "io.getquill:quill-jdbc-zio_3:4.8.5",
        "dev.zio:zio-logging_3:2.3.1",
        "dev.zio:zio-logging-slf4j_3:2.3.1",
        "ch.qos.logback:logback-classic:1.5.11",
        "commons-validator:commons-validator:1.9.0",
    ],
    lock_file = "//:maven_install.json",
)

use_repo(maven, "maven")
